# apertur-rust

./: Cargo.toml  README.md
src/: client.rs  crypto.rs  error.rs  http.rs  lib.rs  signature.rs  types.rs
src/resources/: destinations.rs  encryption.rs  keys.rs  mod.rs  polling.rs  sessions.rs  stats.rs  upload.rs  uploads.rs  webhooks.rs
